--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 d-none d-lg-block">
-                        <img class="img-fluid" src="./assets/images/Illustration.png" alt="">
+                        <img class="img-fluid" src="https://positivustheme.vercel.app/_image?href=%2F_astro%2Fhero.Cc0GD7y9.svg&w=601&h=515&f=svg" alt="error">
                     </div>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                                 <div class="col-lg-6">
                                     <img class="img-fluid"
                                         src="https://positivustheme.vercel.app/_image?href=%2F_astro%2Fcard-pic2.BeQ4x_k2.png&w=210&h=148&f=webp"
-                                        alt="">
+                                        alt="error">
                                 </div>
                             </div>
                         </div>
@@ -191,7 +191,7 @@
                                 <div class="col-lg-6">
                                     <img class="img-fluid"
                                         src="https://positivustheme.vercel.app/_image?href=%2F_astro%2Fcard-pic2.BeQ4x_k2.png&w=210&h=148&f=webp"
-                                        alt="">
+                                        alt="error">
                                 </div>
                             </div>
                         </div>
@@ -217,7 +217,7 @@
                                 <div class="col-lg-6">
                                     <img class="img-fluid"
                                         src="https://positivustheme.vercel.app/_image?href=%2F_astro%2Fcard-pic1.LmmlwL7_.png&w=210&h=170&f=webp"
-                                        alt="">
+                                        alt="error">
                                 </div>
                             </div>
                         </div>
@@ -397,7 +397,7 @@
                                 <input class="form-control mt-4 bg-dark text-white" type="submit" value="Send Message">
                             </form>
                         </div>
-                        <img class="contact-bg d-none d-lg-block" src="./assets/images/contact-bg.png" alt="">
+                        <img class="contact-bg d-none d-lg-block" src="https://positivustheme.vercel.app/_image?href=%2F_astro%2Fcontact-pic.BrB0SfUf.png&w=692&h=649&f=webp" alt="error">
 
                     </div>
                 </div>
@@ -411,7 +411,7 @@
                 <div class="col-lg-12">
                     <div class="row">
                         <div class="col-lg-3 text-center text-lg-start mb-5 mb-lg-0">
-                            <img src="./assets/images/footer-logo.png" alt="">
+                            <img src="https://positivustheme.vercel.app/_image?href=%2F_astro%2Flogo-alt.g2asEovs.svg&w=220&h=36&f=svg" alt="error">
                         </div>
                         <div class="col-lg-6">
                             <ul class="d-flex flex-column flex-lg-row text-center text-lg-start ps-0">
